--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -2,11 +2,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/uipart"
     tools:context=".DashboardActivity">
+
+    <com.synapticon.bucke.dashboard.BackgroundRadialGradient
+        android:id="@+id/color_gradient_circle_button"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true" />
+
+    <com.synapticon.bucke.dashboard.SpeedRectangle
+        android:id="@+id/speed_rectangle"
+        android:layout_width="280dp"
+        android:layout_height="280dp"
+        android:layout_marginStart="240dp"
+        android:layout_marginTop="40dp" />
+
+    <TextView
+        android:id="@+id/speed_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="120dp"
+        android:gravity="center"
+        android:text="0"
+        android:textSize="150dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom"
+        android:padding="40dp">
+
+        <SeekBar
+            android:id="@+id/speed_bar"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignStart="@+id/view"
+            android:max="50" />
+    </LinearLayout>
 
 </RelativeLayout>
