--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -22,16 +22,17 @@
         android:layout_height="match_parent"
         android:layout_marginStart="320dp" />
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/uipart" />
-
     <com.synapticon.bucke.dashboard.BatteryBox
         android:layout_width="80dp"
         android:layout_height="160dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="100dp" />
+
+    <com.synapticon.bucke.dashboard.BoostBox
+        android:layout_width="110dp"
+        android:layout_height="225dp"
+        android:layout_marginStart="490dp"
+        android:layout_marginTop="68dp" />
 
     <com.synapticon.bucke.dashboard.InfoBox
         android:layout_width="165dp"
