--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -54,6 +54,20 @@
         android:layout_marginStart="240dp"
         android:layout_marginTop="40dp" />
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="313dp">
+
+        <ImageView
+            android:id="@+id/high_beam_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:src="@drawable/transition_high_beam" />
+    </RelativeLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -88,11 +102,12 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="280dp"
         android:layout_height="match_parent"
+        android:layout_marginStart="240dp"
         android:gravity="bottom"
         android:orientation="horizontal"
-        android:padding="10dp">
+        android:paddingBottom="5dp">
 
         <SeekBar
             android:id="@+id/speed_bar"
