--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -43,6 +43,7 @@
         android:src="@drawable/selector_navigation_drawer" />
 
     <com.synapticon.bucke.dashboard.BatteryBox
+        android:id="@+id/battery_box"
         android:layout_width="80dp"
         android:layout_height="160dp"
         android:layout_marginStart="40dp"
@@ -205,20 +206,36 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="280dp"
+        android:layout_width="320dp"
         android:layout_height="match_parent"
-        android:layout_marginStart="240dp"
+        android:layout_marginStart="220dp"
         android:gravity="bottom"
         android:orientation="horizontal"
         android:paddingBottom="5dp">
 
         <SeekBar
-            android:id="@+id/speed_bar"
-            android:layout_width="match_parent"
+            android:id="@+id/battery_bar"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/view"
-            android:max="50" />
-    </LinearLayout>
+            android:layout_weight="1"
+            android:max="100"
+            android:progress="100" />
 
+        <SeekBar
+            android:id="@+id/speed_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="2dp"
+            android:layout_marginStart="2dp"
+            android:layout_weight="1"
+            android:max="50" />
+
+        <SeekBar
+            android:id="@+id/boost_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:max="100"
+            android:progress="100" />
+    </LinearLayout>
 </RelativeLayout>
