--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -185,6 +185,15 @@
             android:textOff="RED"
             android:textOn="RED" />
 
+        <EditText
+            android:id="@+id/battery_charge_text"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:imeOptions="actionDone|flagNoExtractUi"
+            android:inputType="numberSigned"
+            android:text="0" />
+
         <View
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
