--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -171,6 +171,14 @@
             android:textOff="RED"
             android:textOn="RED" />
 
+        <ToggleButton
+            android:id="@+id/ui_toggle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:textOff="UI"
+            android:textOn="UI" />
+
         <EditText
             android:id="@+id/battery_charge_text"
             android:layout_width="50dp"
