--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -9,12 +9,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <com.synapticon.bucke.dashboard.LeftBlinker
+    <com.synapticon.bucke.dashboard.LeftTurnSignal
         android:id="@+id/left_blinker"
         android:layout_width="320dp"
         android:layout_height="match_parent" />
 
-    <com.synapticon.bucke.dashboard.RightBlinker
+    <com.synapticon.bucke.dashboard.RightTurnSignal
         android:id="@+id/right_blinker"
         android:layout_width="320dp"
         android:layout_height="match_parent"
@@ -76,7 +76,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="80dp" />
 
-    <com.synapticon.bucke.dashboard.HighBeamCard
+    <com.synapticon.bucke.dashboard.HeadlightCard
         android:id="@+id/high_beam_card"
         android:layout_width="165dp"
         android:layout_height="200dp"
